Fixed tiny layout bug with vote hover tooltips

--- a/www/style-less.linux.css
+++ b/www/style-less.linux.css
@@ -1593,6 +1593,8 @@ h1.listing + .post-meta .read-time {
 }
 .post .post-meta {
 	text-align: center;
+	position: relative;
+	z-index: 2;
 }
 .post .top-post-meta:last-child {
 	margin-bottom: 40px;
